--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "mocha src/tests/test.cjs --timeout 60000"
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
@@ -25,9 +26,13 @@
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "chai": "^5.0.0",
+    "chromedriver": "^121.0.0",
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "mocha": "^10.2.0",
+    "selenium-webdriver": "^4.17.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   }
